--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,38 @@ body {
     background-color: black;
     color:gray;
 }
+
+header,main,nav {
+    text-align: center;
+}
+
+footer {
+    text-align: center;
+    font-size: 0.6em;
+}
+
+nav a {
+    padding: 15px;
+    padding-bottom: 4px;
+    font-size: 1.8em;
+    text-decoration: none;
+    color: white;
+}
+
+nav a:hover {
+    border-bottom: 2px orange solid;
+    font-size: 2em;
+    transition: .95s;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+.menuselected{
+    text-decoration: italic;
+    color:blue;
+    font-size: 2em;
+    border-bottom: 2px
+}
