--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,9 @@ ul {
 .hobby {
     color: yellow;
 }
+
+h1 {
+    font-family: 'Pacifico', cursive;
+    font-size: 4em;
+    margin-bottom: 0px
+}
